# open-dm

./: .gitignore  Makefile  Makefile.in  README  config.h.in  configure  configure.ac  open-dm.cbp  open-dm.workspace
data/: map1.map
media/: floor.tif  wall1.tif
src/: BlockRenderer.cpp  BlockRenderer.h  DataReader.cpp  DataReader.h  File.h  Globals.h  Makefile  Makefile.am  Makefile.in  OpenDM.h  PlaneRenderer.cpp  PlaneRenderer.h  SlabRenderer.cpp  SlabRenderer.h  StateManager.cpp  StateManager.h  StepCamera.cpp  StepCamera.h  UniqueName.cpp  UniqueName.h  block.c  camera.c  hello-gl.frag  main.c  open-dm.h  test.cpp
